k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
