k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
      nodePort: 30002
